osd/SnapMapper: fix _lookup_purged_snap

We should verify that the snap we are looking for matches the
pool also.
Same as we are checking in OSDMonitor:
https://github.com/ceph/ceph/pull/28865/commits/0a48392ce066471233cc1e81e957b2999b9c411c

Fixes: https://tracker.ceph.com/issues/64347

Signed-off-by: Matan Breizman <mbreizma@redhat.com>
(cherry picked from commit 8f2ee228af0fa0723328c0cf5c7e85906be8e287)